--- a/index.html
+++ b/index.html
@@ -20,7 +20,6 @@
         </nav>
     </header>
 
-    <!-- Home Section -->
     <section id="home" class="page-section active">
         <div class="hero">
             <h1>Welcome to TechBlog</h1>
@@ -52,7 +51,6 @@
         </div>
 
         <div class="blog-grid" id="blogGrid">
-            <!-- Blog posts will be dynamically loaded here -->
         </div>
 
         <div class="no-results" id="noResults">
@@ -62,7 +60,6 @@
         </div>
     </section>
 
-    <!-- About Section -->
     <section id="about" class="page-section">
         <div class="hero">
             <h1>About TechBlog</h1>
@@ -108,7 +105,6 @@
         </div>
     </section>
 
-    <!-- Contact Section -->
     <section id="contact" class="page-section">
         <div class="hero">
             <h1>Get In Touch</h1>
@@ -150,13 +146,13 @@
             <div class="about-card">
                 <div class="about-icon">📧</div>
                 <h3>Email Us</h3>
-                <p>hello@techblog.com<br />support@techblog.com</p>
+                <p>ayushman1413@gmail.com<br />support@log.com</p>
             </div>
             
             <div class="about-card">
                 <div class="about-icon">🌐</div>
                 <h3>Follow Us</h3>
-                <p>Twitter: @techblog<br />LinkedIn: /company/techblog<br />GitHub: /techblog</p>
+                <p>Twitter: @ayush<br />LinkedIn: https://www.linkedin.com/in/ayushman01<br />GitHub: https://github.com/ayushman1413</p>
             </div>
             
             <div class="about-card">
@@ -167,7 +163,6 @@
         </div>
     </section>
 
-    <!-- Subscribe Section -->
     <section id="subscribe" class="page-section">
         <div class="hero">
             <h1>Stay Updated</h1>
@@ -213,12 +208,10 @@
         </div>
     </section>
 
-    <!-- Article Modal -->
     <div id="articleModal" class="modal">
         <div class="modal-content">
             <span class="close" onclick="closeModal()">&times;</span>
             <div id="articleContent">
-                <!-- Article content will be loaded here -->
             </div>
         </div>
     </div>
